--- a/src/components/PortfolioSection.module.css
+++ b/src/components/PortfolioSection.module.css
@@ -1,14 +1,3 @@
-.bg {
-  position: absolute;
-  background: linear-gradient(
-    180deg,
-    var(--bg-gradient-start) 0%,
-    var(--bg-gradient-mid) 5%,
-    var(--bg-gradient-mid) 95%,
-    var(--bg-gradient-start) 100%
-  );
-}
-
 .title {
   position: absolute;
   margin: 0;
